# bootproof

./: .gitignore  Cargo.toml  README.md  run.sh  rust-toolchain
.github/workflows/: rust.yml
docs/: hardware.md  network.md  timeline.md
src/: allocator.rs  graphics.rs  logger.rs  main.rs  misc.rs
src/allocator/: standard.rs  uefi.rs
src/arch/: mod.rs
src/arch/x86_64/: gdt.rs  idt.rs  mod.rs
src/driver/: graphic_display.rs  mod.rs  text_display.rs  tty.rs
src/driver/text_display/: graphic.rs
src/driver/tty/: serial.rs  text_display.rs
src/graphics/: color.rs  display.rs  font.rs  terminal.rs  tty.rs
src/graphics/display/: gop.rs
src/graphics/font/: cozette-attribution.txt  cozette.psf  psf.rs
src/graphics/terminal/: display.rs  frame.rs
src/graphics/tty/: serial.rs  terminal.rs  uefi.rs
src/memory/: allocator.rs
src/memory/allocator/: standard.rs
