[package]
name = "bootproof"
version = "0.1.0"
authors = ["James Martin <james@jtmar.me>"]
edition = "2018"
repository = "https://github.com/jamestmartin/bootproof"
license = "GPL-3.0+"
publish = false

[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
uefi = "0.4.7"
x86_64 = "0.11.1"

[dependencies.log]
version = "0.4.11"
default-features = false

[dependencies.num-integer]
version = "0.1.36"
default-features = false
