[package]
name = "bootproof"
version = "0.1.0"
authors = ["James Martin <james@jtmar.me>"]
edition = "2018"
repository = "https://github.com/jamestmartin/bootproof"
license = "GPL-3.0+"
publish = false

[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }

[dependencies.log]
version = "0.4.11"
default-features = false

[dependencies.pc-screen-font]
git = "https://github.com/jamestmartin/pc-screen-font"
rev = "aa3d7a09ee5d0ee632676fbbabea8fcaf570b83d"

[dependencies.num-integer]
version = "0.1.44"
default-features = false

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = "0.7"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.13"
